--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <a href="/">
             <span><img src="logo6.png" width="94px" alt=""></span></a>
             <ul>
-                <li><a href="index3.html">Home</a></li>
-                <li><a href="index3.html">About</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
