--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,8 @@
                 <span><img src="logo6.png" width="94px" alt=""></span>
             </a>
             <ul>
-                <li><a href="index3.html">Home</a></li>
-                <li><a href="index3.html">About</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
          </div>
