--- a/blogspot.html
+++ b/blogspot.html
@@ -20,8 +20,8 @@
     
             </a>
             <ul>
-                <li><a href="index3.html">Home</a></li>
-                <li><a href="index3.html">About</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
